test_suite/alan-2022-examples/passing/000141_pair.alan
source u begin P := array true; leave end
