test_suite/alan-2022-examples/failing/000700_mutation.alan
source m6X begin boolean >= array P5; relax end
